# langChain_learning

./: pyproject.toml
CH-1/: 1_Basics.ipynb  1_LLM_call.ipynb  2_Messages.ipynb
