[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.66.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "python-dotenv>=1.2.2",
]
